Bug 1380031: Ensure Math.exp(1) returns Math.E. r=arai

Differential Revision: https://phabricator.services.mozilla.com/D24354